<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firmware_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".activities.FirmwareUpdateActivity">

    <LinearLayout
        android:id="@+id/ll_current_firmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_decoration"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/content_descr_update_indicator" />

        <TextView
            android:id="@+id/tv_current_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_current_firmware"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unknown_version"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_release_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_current_firmware"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/button_firmware_release_notes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dms_versions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_install_update"
        android:layout_below="@id/btn_release_notes"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btn_install_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_install_update" />

</RelativeLayout>