<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical">

    <View
        android:id="@+id/view_rectangle"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ll_scan_result"
        android:layout_alignBottom="@id/ll_scan_result"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/ll_scan_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:minHeight="160dp"
        android:layout_toEndOf="@id/view_rectangle"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_device_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_uuid_with_colon"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_device_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_uuid"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_rssi_with_colon"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rssi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rssi_mock_value"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>